fix: jquery + style crud + style modal + edit fix

--- a/employee/viewEquipmentCategory/index.html
+++ b/employee/viewEquipmentCategory/index.html
@@ -30,8 +30,10 @@
 
     <div id="edit-modal" class="modal">
         <div class="modal-content">
-            <span class="close-button">&times;</span>
-            <h2>Editar Categoria</h2>
+            <div>
+                <h2>Editar Categoria</h2>
+                <span class="close-button">&times;</span>
+            </div>
             <input type="text" id="edit-category-input">
             <button id="save-edit">Salvar</button>
         </div>
