--- a/employee/viewMaintenance/index.html
+++ b/employee/viewMaintenance/index.html
@@ -65,7 +65,7 @@
                     </div>
                 </div>
             </div>
-            <button onclick="window.history.back();">Voltar</button>            <a href="../index.html"> <button>Voltar</button></a>
+            <button onclick="window.history.back();">Voltar</button>
         </div>
     </main>
 
