--- a/employee/viewEmployee/index.html
+++ b/employee/viewEmployee/index.html
@@ -16,9 +16,14 @@
     </header>
     <main>
         <div id="container">
-            <h1>Funcionpários</h1>
+            <h1>Funcionários</h1>
             <div id="employee-form">
-                <input type="text" id="employee-input" placeholder="Novo funcionário">
+                <div id="employee-inputs">
+                    <input type="text" id="employee-name" class="employee-input" placeholder="Novo funcionário">
+                    <input type="date" id="employee-date" class="employee-input" placeholder="Data de Nascimento">
+                    <input type="email" id="employee-email" class="employee-input"placeholder="Email">
+                    <input type="password" id="employee-password" class="employee-input" placeholder="Senha">
+                </div>
                 <button id="add-employee">Adicionar</button>
             </div>
             <div id="employee-list">
