add: RF018 edit + css fix

--- a/employee/viewEmployee/index.html
+++ b/employee/viewEmployee/index.html
@@ -36,10 +36,13 @@
     <div id="edit-modal" class="modal">
         <div class="modal-content">
             <div>
-                <h2>Editar Categoria</h2>
+                <h2>Editar Funcionário</h2>
                 <span class="close-button">&times;</span>
             </div>
-            <input type="text" id="edit-employee-input">
+            <input type="text" id="edit-employee-name" placeholder="Nome">
+            <input type="date" id="edit-employee-date" placeholder="Data">
+            <input type="email" id="edit-employee-email" placeholder="Email">
+            <input type="password" id="edit-employee-password" placeholder="Senha">
             <button id="save-edit">Salvar</button>
         </div>
     </div>
