rota crud employee

--- a/employee/viewReceipts/index.html
+++ b/employee/viewReceipts/index.html
@@ -28,7 +28,9 @@
                 <label for="end-date">Data Final:</label>
                 <input type="date" id="end-date" name="end-date">
                 <button type="submit">Filtrar</button>
+                <button type="reset">Limpar</button>
             </form>
+            <a href="./viewCategory/index.html"> <button>Ver por categoria</button></a>
             </div>
             <div id="report-container">
             <h2>Receitas por Dia</h2>
