[ADD] Roteamento RF019 e RF020

--- a/employee/viewReceipts/index.html
+++ b/employee/viewReceipts/index.html
@@ -19,6 +19,7 @@
         <div id="container">
             <div id="header-container">
             <h1>Relatório de Receitas</h1>
+            <a href="../index.html"> <button id="button-back">Voltar</button></a>
             </div>
             <div id="filter-container">
             <h2>Filtrar por Período</h2>
