--- a/employee/viewReceipts/viewCategory/index.html
+++ b/employee/viewReceipts/viewCategory/index.html
@@ -19,6 +19,7 @@
         <div id="container">
             <div id="header-container">
                 <h1>Relatório de Receitas por Categoria</h1>
+                <a href="../index.html"> <button id="button-back">Voltar</button></a>
             </div>
             <div id="report-container">
                 <h2>Receitas por Categoria</h2>
